[gd_scene load_steps=2 format=2]

[ext_resource path="res://menus/settings.gd" type="Script" id=1]

[node name="Settings" type="AspectRatioContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 212.0
margin_right = 812.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 597.0
margin_bottom = 597.0

[node name="AutoProcess" type="CheckButton" parent="PanelContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 594.0
margin_bottom = 50.0
text = "Automatically Process Worlds"

[node name="Docs" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 594.0
margin_bottom = 95.0
text = "Visit Documentation Page"

[node name="Licenses" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 594.0
margin_bottom = 140.0
text = "Visit Copyrights Page"

[node name="Donation" type="Button" parent="PanelContainer/VBoxContainer"]
modulate = Color( 0.32549, 0.478431, 1, 1 )
margin_top = 144.0
margin_right = 594.0
margin_bottom = 185.0
text = "Donate to Creator [PayPal]"

[connection signal="toggled" from="PanelContainer/VBoxContainer/AutoProcess" to="." method="_on_AutoProcess_toggled"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Docs" to="." method="_on_Docs_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Licenses" to="." method="_on_Licenses_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Donation" to="." method="_on_Donation_pressed"]
